fixed the bg-dark issue and updated the scrollbar styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,27 @@ html, body {
     color: white;
 }
 
+.ps__rail-y  {
+    opacity: 1 !important;
+    width: 4px !important;
+}
+.ps__thumb-x,
+.ps__thumb-y {
+    background-image: linear-gradient(90deg, rgba(232,198,135,1) 0%, rgba(193,153,94,1) 100%);
+    width: 6px !important;
+    margin-right: -3px !important;
+}
+.ps--active-x > .ps__rail-x,
+.ps--active-y > .ps__rail-y,
+.ps .ps__rail-x:hover,
+.ps .ps__rail-y:hover,
+.ps .ps__rail-x:focus,
+.ps .ps__rail-y:focus,
+.ps .ps__rail-x.ps--clicking,
+.ps .ps__rail-y.ps--clicking {
+    background: #1B1B1B !important;
+}
+
 .text-subtle-gold {
     background-image: linear-gradient(90deg, rgba(232,198,135,1) 0%, rgba(193,153,94,1) 100%);
     color: transparent;
